SAR Blai Sandbox/src/objects/Relacion_entre_contactos__c.object
<CustomObject>
    <fields>
        <fullName>Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Usuario/Beneficiario activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apellidos_del_propietario__c</fullName>
        <formula>Contacto_Recomendador__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellidos del propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficiario</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relaciones de beneficiarios</relationshipLabel>
        <relationshipName>Relaciones_entre_contactos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beneficiario_con_colgante__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beneficiario con colgante</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beneficiario_sin_colgante__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beneficiario sin colgante</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacto_Recomendador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto Recomendador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QCbtAAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relación Empresarial</relationshipLabel>
        <relationshipName>Relaciones_entre_contactos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relación Familiar (Contacto)</relationshipLabel>
        <relationshipName>Relaciones_de_contactos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_duplicados_1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Relación contactos duplicada</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Control_duplicados_2__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Familiar de referencia ya informado</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dataloader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control registros carga inicial con el Dataloader</description>
        <label>Dataloader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_propietario_emrpesa__c</fullName>
        <label>Email propietario emrpesa</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Empleo_actual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Empleo actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empresa_recomendadora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entidad recomendadora</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAd7AAG</value>
            </filterItems>
            <filterItems>
                <field>Account.Baja__pc</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relaciones entre contactos (Entidad recomendadora)</relationshipLabel>
        <relationshipName>Relaciones_entre_contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Familiar_de_referencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Familiar de referencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fecha_Baja__c</fullName>
        <label>Fecha Baja / Rechazo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Historico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Histórico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_T24_Pagador__c</fullName>
        <externalId>true</externalId>
        <label>ID T24 Pagador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdGCR__c</fullName>
        <externalId>true</externalId>
        <label>IdGCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsApi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motivo_Baja__c</fullName>
        <label>Motivo Baja / Rechazo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_propietario__c</fullName>
        <formula>Contacto_Recomendador__r.Owner.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre del propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Oportunidad_platform__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QIDZ,012b0000000QIDe,012b0000000QIDj</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Oportunidad_platform__c</referenceTo>
        <relationshipLabel>Relaciones de beneficiarios</relationshipLabel>
        <relationshipName>Relaciones_entre_contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pagador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relacion_personal__c</fullName>
        <label>Relación personal</label>
        <picklist>
            <picklistValues>
                <fullName>Amigo/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cónyuge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuidador/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuñado/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hermano/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hijo/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médico/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nieto/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Padre/Madre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pareja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pariente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primo/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sobrino/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tio/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutor/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yerno/Nuera</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <filterItems>
                <field>Account.Residente__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relación Familiar (Residente)</relationshipLabel>
        <relationshipName>Relaciones_de_contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ultima_Mod__c</fullName>
        <label>Última Modificación</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usuario_principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Usuario principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>idEntidadrecomendadora__c</fullName>
        <formula>Empresa_recomendadora__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>idEntidadrecomendadora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_T24__c</fullName>
        <externalId>true</externalId>
        <label>id T24</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Relación entre contactos</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nombre de Relación de contactos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relaciones entre contactos</pluralLabel>
    <recordTypes>
        <fullName>Relacion_Familiar</fullName>
        <active>true</active>
        <label>Relación Familiar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relacion_Recomendadores</fullName>
        <active>true</active>
        <label>Relación Recomendadores</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relacion_de_beneficiarios</fullName>
        <active>true</active>
        <label>Relacion de beneficiarios</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Informar_tipo_de_beneficiario</fullName>
        <active>true</active>
        <description>Informar sólo un tipo de beneficiario</description>
        <errorConditionFormula>(RecordType.DeveloperName =&apos;Relacion_de_beneficiarios&apos;  &amp;&amp;  (Usuario_principal__c =false  &amp;&amp;
Beneficiario_con_colgante__c =false  &amp;&amp;  Beneficiario_sin_colgante__c =false &amp;&amp; Pagador__c  =false)
|| 
(Usuario_principal__c =true  &amp;&amp;
Beneficiario_con_colgante__c =true  &amp;&amp;  Beneficiario_sin_colgante__c =true)
|| 
(Usuario_principal__c =true  &amp;&amp;
Beneficiario_con_colgante__c =true  &amp;&amp;  Beneficiario_sin_colgante__c =false)
|| 
(Usuario_principal__c =false  &amp;&amp;
Beneficiario_con_colgante__c =true  &amp;&amp;  Beneficiario_sin_colgante__c =true)
|| 
(Usuario_principal__c =true  &amp;&amp;
Beneficiario_con_colgante__c =false  &amp;&amp;  Beneficiario_sin_colgante__c =true))
&amp;&amp;
$Profile.Name  &lt;&gt;&apos;Administrador del Sistema (force.com)&apos;</errorConditionFormula>
        <errorMessage>Sólo se permite informar un tipo de beneficiario</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_modificar_relaciones_exitentes</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName=&apos;Relacion_de_beneficiarios&apos;  &amp;&amp;  NOT(ISNEW())  &amp;&amp; (( ISPICKVAL( Oportunidad__r.Etapa__c , &apos;Cerrada Ganada&apos;) )  || ISPICKVAL( Oportunidad__r.Etapa__c , &apos;Cerrada Perdida&apos;)) &amp;&amp; $Profile.Name  &lt;&gt;&apos;Administrador del Sistema (force.com)&apos;</errorConditionFormula>
        <errorMessage>No se pueden modificar relaciones de beneficiarios existentes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Residente_no_puede_ser_Contacto</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Contacto__c ))  &amp;&amp;  NOT(ISBLANK( Residente__c )) &amp;&amp;   Contacto__r.Id = Residente__r.Id &amp;&amp; $Profile.Name  &lt;&gt;&apos;Administrador del Sistema (force.com)&apos;</errorConditionFormula>
        <errorMessage>El residente y el contacto no pueden ser la misma persona</errorMessage>
    </validationRules>
</CustomObject>